...
                        fontSize: 16,
                        color: Colors.grey,
                      ),
                    ),
                    SizedBox(height: 16),
                    FilledButton.tonal(
                      key: const Key("scheduleButton"),
                      onPressed: () =>
                          _openProgramming(context, widget.schedules),
                      child: const Text('PROGRAMAÇÃO'),
                      style: FilledButton.styleFrom(
                        minimumSize: const Size.fromHeight(50),
                        backgroundColor: Color(0xffd08c22),
...
